--- a/src/Mdns.csproj
+++ b/src/Mdns.csproj
@@ -13,16 +13,16 @@
     <Version>0.31</Version>
     
     <!-- Nuget specs -->
-    <PackageId>Makaretu.Dns.Multicast.New</PackageId>
-    <Authors>Richard Schneider, jdomnitz</Authors>
+    <PackageId>Makaretu.Dns.Multicast.Exa</PackageId>
+    <Authors>Richard Schneider, jdomnitz, vbarney</Authors>
     <Title>Multicast DNS</Title>
     <Description>A simple Multicast Domain Name Service based on RFC 6762.  Can be used as both a client (sending queries) or a server (responding to queries).</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>https://github.com/jdomnitz/net-mdns/releases</PackageReleaseNotes>
-    <Copyright>© 2018-2019 Richard Schneider, jdomnitz</Copyright>
+    <PackageReleaseNotes>https://github.com/vvbarney/net-mdns/releases</PackageReleaseNotes>
+    <Copyright>© 2018-2019 Richard Schneider, jdomnitz, vbarney</Copyright>
     <PackageTags>multicast mdns dns zeroconf</PackageTags>
     <IncludeSymbols>True</IncludeSymbols>
-    <PackageProjectUrl>https://github.com/jdomnitz/net-mdns</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/vvbarney/net-mdns</PackageProjectUrl>
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
